--- a/examples/goes-presentation.html
+++ b/examples/goes-presentation.html
@@ -904,7 +904,7 @@
                         <div>Tutorials</div>
                     </div>
                 </a>
-                <a href="https://github.com/rbardaji/ndp-ep" target="_blank" style="text-decoration: none;">
+                <a href="https://github.com/national-data-platform/ep-api" target="_blank" style="text-decoration: none;">
                     <div class="tech-item" style="cursor: pointer;">
                         <div class="icon">🔌</div>
                         <div>API Docs</div>
