--- a/examples/earthscope-presentation.html
+++ b/examples/earthscope-presentation.html
@@ -909,6 +909,12 @@
                         <div>NDP-EP Python</div>
                     </div>
                 </a>
+                <a href="https://github.com/national-data-platform/ep-api" target="_blank" style="text-decoration: none;">
+                    <div class="tech-item" style="cursor: pointer;">
+                        <div class="icon">🔌</div>
+                        <div>API Docs</div>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
